--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 nav {
@@ -14,10 +15,24 @@ nav {
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
-img.hero{
-  left: 77px;
-  top: 96px;
+section {
+  padding: 20px;
 }
-p.hero{
-  font-size: 16px;
+
+.hero{
+  display: flex;
+  flex-direction: column;
+}
+
+.hero--img {
+  max-width: 800px;
+  align-self: center;
+}
+
+.hero--header {
+  margin-bottom: 16px;
+}
+
+.hero--text {
+  margin-top: 0;
 }
