--- a/src/style.css
+++ b/src/style.css
@@ -10,31 +10,8 @@ body {
 nav {
   height: 70px;
   display: flex;
-  background: #FFFFFF;
   padding: 20px 36px;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-}
-
-section {
-  padding: 20px;
-}
-
-.hero{
-  display: flex;
-  flex-direction: column;
-}
-
-.hero--img {
-  max-width: 800px;
-  align-self: center;
-}
-
-.hero--header {
-  margin-bottom: 16px;
-}
-
-.hero--text {
-  margin-top: 0;
 }
 
 .bold {
@@ -71,14 +48,32 @@ section {
   margin-top: 0;
 }
 
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
+
 .card {
   width: 175px;
   font-size: 12px;
+  flex: 0 0 auto;         
+  display: flex;          
+  flex-direction: column; 
+  position: relative;
 }
 
 .card--image {
   width: 100%;
   border-radius: 9px;
+  margin-bottom: 9px;
+}
+
+
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card--stats {
@@ -88,4 +83,18 @@ section {
 
 .card--star {
   height: 14px;
+}
+
+.card--price {
+  margin-top: auto;
+}
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
